# Robot-Vision

./: CameraCalibArUCo.npz  GPIO_debug.py  LICENSE  LICENSE.txt  PiCode.py  README.md  RapsiVision.py  Vision_Test.py  detect_aruco_board.py  posefromimg.py  pyproject.toml
Boards/: ArUCo Tag Boards.ai  Camera Calibration Boards.ai
Pi Code/: Calibrate_Camera.py  Vision_Test.py
Robot Code/: BASE.mod  BasicFunctions.mod  Bottle_Defs.mod  Gripper_Defs.mod  LightBulb_Defs.mod  Lightbulb_Calib.mod  MainModule.mod  RaspiVision.mod  Summer2023Research.pgf
STLs/: Fingers.stl
archive/: CameraCalib.npz  CameraCalibCharuco.npz  calibrate_camera_charuco.py  calibrate_camera_chess.py  detect_aruco.py  generate_aruco.py  plane_to_quaternion.py
